added dropdown component and set up search to make use of dropdowns for future search parameters

--- a/client/src/components/Input/input.css
+++ b/client/src/components/Input/input.css
@@ -8,51 +8,57 @@
     color: #72afe4 !important;    
   }
   .singularityInput input[type=text] {
-    border-bottom: 1px solid #494848 ;
+    border-bottom: 1px solid #494849 ;
   
   }
   .singularityInput input[type=email] {
-    border-bottom: 1px solid #494848 ;
+    border-bottom: 1px solid #494849 ;
  
   }
   .singularityInput input[type=password] {
-    border-bottom: 1px solid #494848 ;
+    border-bottom: 1px solid #484849 ;
    
   }
   .singularityInput .validate input[type=text]:invalid {
-    border-bottom: 1px solid #494848 ;
+    border-bottom: 1px solid #494849 ;
   
   }
   .singularityInput .validate input[type=email]:invalid {
-    border-bottom: 1px solid #494848 ;
+    border-bottom: 1px solid #494849 ;
  
   }
   .singularityInput .validate input[type=password]:invalid {
-    border-bottom: 1px solid #494848 ;
+    border-bottom: 1px solid #494849 ;
    
   }
   .singularityInput .validate input[type=text]:valid {
     border-bottom: 1px solid #72afe4 !important;
+    box-shadow: 0 1px 0 0 #72afe4 !important;
   
   }
   .singularityInput .validate input[type=email]:valid {
     border-bottom: 1px solid #72afe4 !important;
+    box-shadow: 0 1px 0 0 #72afe4 !important;
  
   }
   .singularityInput .validate input[type=password]:valid {
     border-bottom: 1px solid #72afe4 !;
+    box-shadow: 0 1px 0 0 #72afe4 !important;
    
   }
   .singularityInput input[type=text]:focus {
     border-bottom: 1px solid #72afe4 !important;
+    box-shadow: 0 1px 0 0 #72afe4 !important;
    
   }
   .singularityInput input[type=email]:focus {
     border-bottom: 1px solid #72afe4 !important;
+    box-shadow: 0 1px 0 0 #72afe4 !important;
   
   }
   .singularityInput input[type=password]:focus {
     border-bottom: 1px solid #72afe4 !important;
+    box-shadow: 0 1px 0 0 #72afe4 !important;
 
   }
   
