--- a/client/src/components/GamePlayPage/style.css
+++ b/client/src/components/GamePlayPage/style.css
@@ -1,5 +1,8 @@
 .gamearea {
    margin-top: 2vh;
+   background-image: url("../assets/images/background3.jpg");
+   background-repeat: no-repeat;
+   background-size: cover;
 }
 
 .opponentRow1{
@@ -27,22 +30,30 @@
 }
 
 .opponentHand{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 17vh;
     width: 80%;
     margin:auto;
+    background-image: url("../assets/images/opponent-background2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius:5%;
 }
 
-.playerArea {
-    height: 40vh;
-    margin: 0;
+.opponentCard {
+    height: 13vh;
+    width: 10vh;
+    margin-right: 5px;
 }
 
-.playerRow1 {
+.userRow1 {
     height: 22vh;
     margin: 0;
 }
 
-.playerRow2 {
+.userRow2 {
     height: 18vh;
     margin: 0;
 }
@@ -50,6 +61,11 @@
 .resourceArea {
     height: 22vh;
     margin: 0;
+    background-image: url("../assets/images/resource-background2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius:5%;
 }
 
 .userPlayedCardsArea {
@@ -63,33 +79,71 @@
 .userPlayedCards {
     height: 20vh;
     width: 90%;
-    margin:auto;    
+    margin:auto;  
+    display: flex;
+    justify-content: center;
+    align-items: center;  
 
 }
 
-.playerHandArea {
+.userHandArea {
     height: 18vh;
     margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: end;
+    
 }
 
-.playerHand {
+.userHand {
     height: 17vh;
     width: 80%;
     margin:auto;
    /*  margin-top: 0;*/
     margin-bottom: 0; 
-}
-/*Alternative player area layout*/
-/* .row2col1 {
-    height: 40vh;
-    margin:0;
+    background-image: url("../assets/images/player-background3.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius:5%;
 }
 
-.row2col2 {
-    height: 40vh;
-    margin: 0;
+.userCard {
+    height: 13vh;
+    width: 10vh;
+    margin-right: 5px;
 }
- */
+
+.userAvatar {
+    height: 20vh;
+    margin-right: 5px;
+    border-radius: 50%;
+    align-self: flex-end;
+}
+
+.opponentAvatar {
+    height: 20vh;
+    margin-right: 5px;
+    border-radius: 50%;
+    align-self: flex-start;
+}
+
+.opponentHand .hp {
+    font-size: 20px;
+    font-family: 'Futura';
+    color: #fff;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080;
+    margin-right: 5vw;
+    text-align: center;
+}
+
+.userHand .hp {
+    font-size: 20px;
+    font-family: 'Futura';
+    color: #fff;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px lime, 0 0 30px lime, 0 0 40px lime, 0 0 55px lime, 0 0 75px lime;
+    margin-right: 5vw;
+    text-align: center;
+}
