--- a/client/src/components/GamePlayPage/style.css
+++ b/client/src/components/GamePlayPage/style.css
@@ -26,7 +26,9 @@
     height: 20vh;
     width: 90%;
     margin:auto;    
-  
+    display: flex;
+    justify-content: center;
+    align-items: center;  
 }
 
 .opponentHand{
