--- a/client/src/components/DeckBuilderPage/deckbuilder.css
+++ b/client/src/components/DeckBuilderPage/deckbuilder.css
@@ -1,6 +1,4 @@
 .userInfo {
-    /* margin-top: 15px;
-    margin-left: 15px; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,6 +7,12 @@
 .userInfo .profilePic {
     width: 50px;
     height: 50px;
+    margin-top: 10px;
+}
+
+.deckBuilderHead {
+    display: flex;
+    
 }
 
 .deckBuilderTitle {
@@ -20,15 +24,32 @@
 .deckSpace {
     min-height: 65vh;
     border: 1px solid black;
+    
 }
 
 .sorting {
-    border: 1px solid black;
-    height: 15vh;
+    display: flex;
+    justify-content: center;
+    height: 5vh;
 }
 
 .cardArea {
-    border: 1px solid black;
     min-height: 65vh;
+    margin-top: 10px;
 }
 
+.cardDiv {
+    text-align: -webkit-center;
+    margin: 10px auto;
+}
+
+.deckEntry {
+    display: flex;
+}
+
+.deleteCard {
+    margin-left: 5px;
+    margin-top: 18px;
+    color: red;
+    cursor: pointer;
+}
