--- a/client/src/components/GameCard/style.css
+++ b/client/src/components/GameCard/style.css
@@ -1,22 +1,22 @@
-.card.horizontal {
+/* .card.horizontal {
     display: flex !important;
     flex-direction: row-reverse !important;
-}
+} */
 .gameCard{
-   width: 200px;
-   height: 300px;
+    cursor: pointer;
+    width: 90%;
+   height: 40vh;
     background-image: url('../assets/images/techBack.jfif');
     background-size: contain;
 }
 .template {
     z-index: 0;
-    
 }
 
 .cardImage{
     border: 2px solid silver;
   
-   height: auto;
+   height: 15vh;
    width: 80%;
     /* position: relative; */
     /* top: -401px;
