--- a/client/src/components/GamePlayPage/style.css
+++ b/client/src/components/GamePlayPage/style.css
@@ -24,11 +24,10 @@
 
 .opponentPlayedCards{
     height: 20vh;
-    width: 90%;
-    margin:auto;    
+    width: 90%; 
     display: flex;
     justify-content: center;
-    align-items: center;  
+    align-items: flex-end;
 }
 
 .opponentHand{
@@ -73,7 +72,7 @@
 .userPlayedCardsArea {
     display: flex;
     justify-content: center;
-    height: 22vh;
+    height: 21vh;
     margin: 0;
 
 }
@@ -81,15 +80,14 @@
 .userPlayedCards {
     height: 20vh;
     width: 90%;
-    margin:auto;  
     display: flex;
     justify-content: center;
-    align-items: center;  
+   
 
 }
 
 .userHandArea {
-    height: 18vh;
+    height: 19vh;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -98,7 +96,7 @@
 }
 
 .userHand {
-    height: 17vh;
+    height: 19vh;
     width: 80%;
     margin:auto;
    /*  margin-top: 0;*/
@@ -121,7 +119,6 @@
     height: 16vh;
     width: 12vh;
     margin-right: 5px;
-    font-size: 1vh;
 }
 .card-content {
     margin: 0;
@@ -152,7 +149,15 @@
     margin-right: 5vw;
     text-align: center;
 }
-
+.opponentPlayedCardStats {
+    font-size: 14px;
+    font-family: 'Futura';
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080;
+    text-align: center;
+}
 .userHand .hp {
     font-size: 20px;
     font-family: 'Futura';
@@ -162,11 +167,27 @@
     text-align: center;
 }
 
+.userPlayedCardStats {
+
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: black;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px lime, 0 0 30px lime, 0 0 40px lime, 0 0 55px lime, 0 0 75px lime;
+    text-align: center;
+}
+.userHandStats {
+    font-size: 12px;
+    font-family: 'Futura';
+    color: #fff;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px lime, 0 0 30px lime, 0 0 40px lime, 0 0 55px lime, 0 0 75px lime;
+    text-align: center;
+
+}
 .playedCard {
-    height: 13vh;
-    width: 10vh;
+    height: 16vh;
+    width: 12vh;
     margin-right: 5px;
-   
     animation-name: example;
     animation-duration: 2s;  
     animation-fill-mode: forwards;
@@ -191,7 +212,7 @@
     z-index: 1;
     bottom: 100%;
     left: 50%;
-    margin-left: -60px;
+    margin-left: -60px
   }
   
   .tooltip:hover .tooltiptext {
